| Summary: | ASTERISK-29754: odbc: Fix for Doxygen | ||
| Reporter: | Alexander Traud (traud) | Labels: | |
| Date Opened: | 2021-11-17 03:27:05.000-0600 | Date Closed: | 2021-11-18 16:55:17.000-0600 |
| Priority: | Trivial | Regression? | |
| Status: | Closed/Complete | Components: | Documentation Functions/func_odbc Resources/res_odbc |
| Versions: | 16.22.0 18.8.0 19.0.0 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | If all {{WARN_}} are enabled in the file {{doc/asterisk-ng-doxygen.in}}, the following appears in the file {{doxygen.log}}:
{code} funcs/func_odbc.c:299: warning: unable to resolve reference to 'release_dsn' for \ref command res/res_config_odbc.c:810: warning: argument 'ap' of command @param is not found in the argument list of destroy_odbc(const char *database, const char *table, const char *keyfield, const char *lookup, const struct ast_variable *fields) res/res_config_odbc.c:824: warning: The following parameter of destroy_odbc(const char *database, const char *table, const char *keyfield, const char *lookup, const struct ast_variable *fields) is not documented: parameter 'fields' res/res_config_odbc.c:329: warning: argument 'ap' of command @param is not found in the argument list of realtime_multi_odbc(const char *database, const char *table, const struct ast_variable *fields) res/res_config_odbc.c:342: warning: The following parameter of realtime_multi_odbc(const char *database, const char *table, const struct ast_variable *fields) is not documented: parameter 'fields' res/res_config_odbc.c:158: warning: argument 'ap' of command @param is not found in the argument list of realtime_odbc(const char *database, const char *table, const struct ast_variable *fields) res/res_config_odbc.c:170: warning: The following parameter of realtime_odbc(const char *database, const char *table, const struct ast_variable *fields) is not documented: parameter 'fields' res/res_config_odbc.c:729: warning: argument 'ap' of command @param is not found in the argument list of store_odbc(const char *database, const char *table, const struct ast_variable *fields) res/res_config_odbc.c:741: warning: The following parameter of store_odbc(const char *database, const char *table, const struct ast_variable *fields) is not documented: parameter 'fields' res/res_config_odbc.c:662: warning: argument 'ap' of command @param is not found in the argument list of update2_odbc(const char *database, const char *table, const struct ast_variable *lookup_fields, const struct ast_variable *update_fields) res/res_config_odbc.c:675: warning: The following parameters of update2_odbc(const char *database, const char *table, const struct ast_variable *lookup_fields, const struct ast_variable *update_fields) are not documented: parameter 'lookup_fields' parameter 'update_fields' res/res_config_odbc.c:502: warning: argument 'ap' of command @param is not found in the argument list of update_odbc(const char *database, const char *table, const char *keyfield, const char *lookup, const struct ast_variable *fields) res/res_config_odbc.c:516: warning: The following parameter of update_odbc(const char *database, const char *table, const char *keyfield, const char *lookup, const struct ast_variable *fields) is not documented: parameter 'fields' res/res_odbc.c:30: warning: unable to resolve reference to 'cdr_odbc' for \ref command res/res_odbc.c:984: warning: The following parameters of _ast_odbc_request_obj(const char *name, int check, const char *file, const char *function, int lineno) are not documented: parameter 'file' parameter 'function' parameter 'lineno' res/res_odbc.c:478: warning: The following parameter of ast_odbc_execute_sql(struct odbc_obj *obj, SQLHSTMT *stmt, const char *sql) is not documented: parameter 'stmt' include/asterisk/res_odbc.h:167: warning: Found unknown command '\parma' res/res_odbc.c:463: warning: The following parameter of ast_odbc_prepare(struct odbc_obj *obj, SQLHSTMT *stmt, const char *sql) is not documented: parameter 'sql' include/asterisk/res_odbc.h:119: warning: The following parameters of _ast_odbc_request_obj(const char *name, int check, const char *file, const char *function, int lineno) are not documented: parameter 'file' parameter 'function' parameter 'lineno' include/asterisk/res_odbc.h:178: warning: The following parameter of ast_odbc_execute_sql(struct odbc_obj *obj, SQLHSTMT *stmt, const char *sql) is not documented: parameter 'stmt' include/asterisk/res_odbc.h:191: warning: return value 'A' of ast_odbc_find_table has multiple documentation sections include/asterisk/res_odbc.h:191: warning: argument 'database' from the argument list of ast_odbc_find_table has multiple @param documentation sections include/asterisk/res_odbc.h:191: warning: argument 'tablename' from the argument list of ast_odbc_find_table has multiple @param documentation sections include/asterisk/res_odbc.h:167: warning: Found unknown command '\parma' include/asterisk/res_odbc.h:171: warning: The following parameter of ast_odbc_prepare(struct odbc_obj *obj, SQLHSTMT *stmt, const char *sql) is not documented: parameter 'sql' {code} | ||
| Comments: | By: Asterisk Team (asteriskteam) 2021-11-17 03:27:07.383-0600 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. Please note that log messages and other files should not be sent to the Sangoma Asterisk Team unless explicitly asked for. All files should be placed on this issue in a sanitized fashion as needed. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. Please note that once your issue enters an open state it has been accepted. As Asterisk is an open source project there is no guarantee or timeframe on when your issue will be looked into. If you need expedient resolution you will need to find and pay a suitable developer. Asking for an update on your issue will not yield any progress on it and will not result in a response. All updates are posted to the issue when they occur. Please note that by submitting data, code, or documentation to Sangoma through JIRA, you accept the Terms of Use present at [https://www.asterisk.org/terms-of-use/|https://www.asterisk.org/terms-of-use/]. By: Friendly Automation (friendly-automation) 2021-11-18 16:55:17.630-0600 Change 17529 merged by Friendly Automation: odbc: Fix for Doxygen. [https://gerrit.asterisk.org/c/asterisk/+/17529|https://gerrit.asterisk.org/c/asterisk/+/17529] By: Friendly Automation (friendly-automation) 2021-11-18 17:04:37.163-0600 Change 17528 merged by Friendly Automation: odbc: Fix for Doxygen. [https://gerrit.asterisk.org/c/asterisk/+/17528|https://gerrit.asterisk.org/c/asterisk/+/17528] By: Friendly Automation (friendly-automation) 2021-11-19 02:50:41.176-0600 Change 17505 merged by Friendly Automation: odbc: Fix for Doxygen. [https://gerrit.asterisk.org/c/asterisk/+/17505|https://gerrit.asterisk.org/c/asterisk/+/17505] By: Friendly Automation (friendly-automation) 2021-11-19 07:13:38.373-0600 Change 17527 merged by George Joseph: odbc: Fix for Doxygen. [https://gerrit.asterisk.org/c/asterisk/+/17527|https://gerrit.asterisk.org/c/asterisk/+/17527] | ||