funcs/func_odbc.c
@@ -296,7 +296,7 @@ static int connection_dead(struct odbc_obj *connection)
  * to callers in most cases.
  *
  * When finished with the returned structure, the caller must call
- * \ref release_dsn
+ * \ref release_obj_or_dsn
  *
  * \param name Name of the DSN as found in res_odbc.conf
  * \retval NULL Unable to retrieve or create the DSN
